<resources>
    <string name="app_name">Fiets Veilig</string>

    <!-- HAMBURGER MENU ITEMS -->
    <string name="home">Home</string>
    <string name="leaderboard">Scorebord</string>
    <string name="challenges">Uitdagingen</string>
    <string name="profile">Profiel</string>
    <string name="help">Help</string>
    <string name="username">Username</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_collection">Collectie</string>


    <!-- HOME FRAGMENT -->
    <string name="study_button">Theorie</string>
    <string name="test_button">Oefen</string>
    <string name="minigames_button">Minigames</string>
    <string name="logo">Logo</string>
    <string name="title_activity_theorie">Theorie</string>
    <string name="title_activity_oefen">Oefen</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_mini_games">Mini Games</string>

    <!-- PROFILE PAGE -->
    <string name="profile_picture_description">Profile picture</string>
    <string name="profile_name">Edgar</string>
    <string name="profile_title">Ervaren</string>
    <string name="profile_next_title">Expert</string>
    <string name="progress_progress">Voortgang</string>
    <string name="progress_scores">Scores</string>
    <string name="progress_scores_best">Beste score</string>
    <string name="progress_average_score">Gemiddelde score</string>
    <string name="progress_last_score">Laatste score</string>
    <string name="requests_accept">Accepteer</string>
    <string name="requests_reject">Weiger</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_userId">Gebruikersnaam</string>
    <string name="prompt_password">Wachtwoord</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_guest_sign_in">Log in als gast</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">Verkeerde gebruikersnaam</string>
    <string name="error_invalid_password">Het wachtwoord is te kort</string>
    <string name="error_incorrect_password">Het wachtwoord is incoorect</string>
    <string name="error_field_required">Dit veld is verplicht</string>
    <string name="logout">Uitloggen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- MINIGAMES TODO: verander naam van virtual route -->
    <string name="memory_button">Speel Memory</string>
    <string name="search_and_find_button">Ga op zoek naar verkeersborden</string>
    <string name="virtual_route_button">Virtual Route</string>
    <string name="open_camera">Scan verkeersbord</string>
    <string name="title_activity_search_and_find">SearchAndFindActivity</string>
    <string name="title_activity_memory2">Memory spelen</string>
    <string name="title_activity_search_and_find2">Zoek de verkeersborden</string>
    <string name="title_activity_memory_info">MemoryInfoActivity</string>
    <string name="start_memory_button">Start Memory</string>
    <string name="memory_info_text">Dit is het spel "Memory". Het is de bedoeling om twee dezelfde kaarten te vinden. Dit in zo weinig mogelijk beurten. Hoe minder beurten, hoe meer punten.\nDruk op onderstaande knop om het spel te starten.\n\nHIGH SCORE: 76
    </string>
    <string name="search_and_find_info_text">Dit is het spel "Zoek de verkeersborden". Het is de bedoeling om met de camera verkeersborden langs de weg te scannen. Je krijgt dan het bord te zien en de betekenis ervan. Je krijgt punten voor elk nieuw gescand verkeersbord.\nJe kan alle gescande verkeersborden bekijken in de collectie.\nDruk op onderstaande knop om het spel te starten.\n\nHIGH SCORE: 76
    </string>
    <string name="virtual_route_text">Dit is het spel "Doe virtuele route". Het is de bedoeling om met de pijltjes de wereld te verkennen.\n Per 10km die je aflegd krijg je 1 punt.\n\nAFGELEGDE WEG: 76 km
    </string>
    <string name="title_activity_sesrch_and_find_info">Zoek de verkeersborden</string>
    <string name="start_search_and_find_button">Start Zoek de verkeersborden</string>
    <string name="title_activity_collection">CollectionActivity</string>
    <string name="title_activity_virtual_route">VirtualRouteActivity</string>

</resources>
