<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/ic_show_chart_black_24dp"
            android:title="@string/leaderboard" />
        <item
            android:id="@+id/nav_challenges"
            android:icon="@drawable/ic_videogame_asset_black_24dp"
            android:title="@string/challenges" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_videogame_asset_black_24dp"
            android:title="@string/help" />

    </group>

</menu>