<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonStudy"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginLeft="@dimen/spacing_small_side"
            android:layout_marginTop="@dimen/spacing_med"
            android:layout_marginRight="@dimen/spacing_small_side"
            android:text="@string/study_button"
            android:textSize="36sp"
            android:textColor="@color/text_on_yellow"
            android:background="@color/colorPrimary"/>

        <Button
            android:id="@+id/buttonTest"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginLeft="@dimen/spacing_small_side"
            android:layout_marginTop="@dimen/spacing_med"
            android:layout_marginRight="@dimen/spacing_small_side"
            android:text="@string/test_button"
            android:textSize="36sp"
            android:textColor="@color/text_on_yellow"
            android:background="@color/colorPrimary"/>

        <Button
            android:id="@+id/buttonMinigames"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginLeft="@dimen/spacing_small_side"
            android:layout_marginTop="@dimen/spacing_med"
            android:layout_marginRight="@dimen/spacing_small_side"
            android:layout_marginBottom="@dimen/spacing_med"
            android:text="@string/minigames_button"
            android:textSize="36sp"
            android:textColor="@color/text_on_yellow"
            android:background="@color/colorPrimary"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
