<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainContainerHome"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeActivity"
    tools:showIn="@layout/app_bar_home">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonStudy"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginLeft="@dimen/spacing_small_side"
            android:layout_marginTop="@dimen/spacing_med"
            android:layout_marginRight="@dimen/spacing_small_side"
            android:text="@string/study_button"
            android:textSize="36sp"/>

        <Button
            android:id="@+id/buttonTest"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginLeft="@dimen/spacing_small_side"
            android:layout_marginTop="@dimen/spacing_med"
            android:layout_marginRight="@dimen/spacing_small_side"
            android:text="@string/test_button"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="136dp" />

        <Button
            android:id="@+id/buttonMinigames"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginLeft="@dimen/spacing_small_side"
            android:layout_marginTop="@dimen/spacing_med"
            android:layout_marginRight="@dimen/spacing_small_side"
            android:layout_marginBottom="@dimen/spacing_med"
            android:text="@string/minigames_button"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="268dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>