<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileFragment">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewOverAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/progress_progress"
            android:textSize="24sp"
            android:textColor="@color/textOnWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBarOverall"
            style="?android:progressBarStyleHorizontal"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:progress="70"
            android:progressDrawable="@drawable/progress_flat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textViewNextTitle"
            app:layout_constraintStart_toEndOf="@+id/textViewCurrentTitle"
            app:layout_constraintTop_toBottomOf="@+id/textViewOverAll" />

        <TextView
            android:id="@+id/textViewCurrentTitle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/profile_title"
            android:textColor="@color/textOnWhite"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewOverAll" />

        <TextView
            android:id="@+id/textViewNextTitle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/profile_next_title"
            android:layout_marginTop="8dp"
            android:textColor="@color/textOnWhite"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewOverAll" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <TextView
            android:id="@+id/textViewTheory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/progress_scores"
            android:textColor="@color/textOnWhite"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewTheoryBeginner"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_marginStart="60dp"
            android:gravity="center"
            android:text="@string/progress_scores_best"
            android:textColor="@color/textOnWhite"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTheory" />

        <ProgressBar
            android:id="@+id/progressBarBeginner"
            style="?android:progressBarStyleHorizontal"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="8dp"
            android:progress="100"
            android:rotation="270"
            android:progressDrawable="@drawable/circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTheory"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textViewBeginnerPercentage"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:gravity="center"
            android:textColor="@color/textOnWhite"
            android:text="Beg"
            app:layout_constraintBottom_toBottomOf="@+id/progressBarBeginner"
            app:layout_constraintEnd_toEndOf="@+id/progressBarBeginner"
            app:layout_constraintStart_toStartOf="@+id/progressBarBeginner"
            app:layout_constraintTop_toTopOf="@+id/progressBarBeginner" />

        <TextView
            android:id="@+id/textViewTheoryIntermediate"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textColor="@color/textOnWhite"
            android:text="@string/progress_average_score"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTheoryBeginner" />

        <ProgressBar
            android:id="@+id/progressBarIntermediate"
            style="?android:progressBarStyleHorizontal"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="8dp"
            android:progress="67"
            android:rotation="270"
            android:progressDrawable="@drawable/circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBarBeginner"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textViewIntermediatePercentage"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:gravity="center"
            android:textColor="@color/textOnWhite"
            android:text="Inter"
            app:layout_constraintBottom_toBottomOf="@+id/progressBarIntermediate"
            app:layout_constraintEnd_toEndOf="@+id/progressBarIntermediate"
            app:layout_constraintTop_toTopOf="@+id/progressBarIntermediate" />

        <TextView
            android:id="@+id/textViewTheoryAdvanced"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textColor="@color/textOnWhite"
            android:text="@string/progress_last_score"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTheoryIntermediate" />

        <ProgressBar
            android:id="@+id/progressBarAdvanced"
            style="?android:progressBarStyleHorizontal"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="8dp"
            android:progress="0"
            android:progressDrawable="@drawable/circle"
            android:rotation="270"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBarIntermediate"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textViewAdvancedPercentage"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:gravity="center"
            android:textColor="@color/textOnWhite"
            android:text="Adv"
            app:layout_constraintBottom_toBottomOf="@+id/progressBarAdvanced"
            app:layout_constraintEnd_toEndOf="@+id/progressBarAdvanced"
            app:layout_constraintTop_toTopOf="@+id/progressBarAdvanced" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>